refactor routes and continue login func
