# Server/MovieStream/utils/token_utils.go
@@ -1,10 +1,16 @@
 package utils
 
 import (
+	"context"
+	"errors"
 	"os"
 	"time"
 
+	"github.com/gin-gonic/gin"
 	jwt "github.com/golang-jwt/jwt/v5"
+	"github.com/noketchup21/MovieStream/Server/MovieStream/database"
+	"go.mongodb.org/mongo-driver/v2/bson"
+	"go.mongodb.org/mongo-driver/v2/mongo"
 )
 
 type SignedDetails struct {
@@ -17,6 +23,7 @@ type SignedDetails struct {
 
 var SECRET_KEY string = os.Getenv("SECRET_KEY")
 var SECRET_REFRESH_KEY string = os.Getenv("SECRET_REFRESH_KEY")
+var userCollection *mongo.Collection = database.OpenCollection("users")
 
 func GenerateAllTokens(email, userID, username, role string) (string, string, error) {
 	claims := &SignedDetails{
@@ -44,9 +51,9 @@ func GenerateAllTokens(email, userID, username, role string) (string, string, er
 		Role:     role,
 		RegisteredClaims: jwt.RegisteredClaims{
 			Issuer: "MovieStream",
-			// JWT valid for 24 hours
+			// JWT valid for 1 week
 			IssuedAt:  jwt.NewNumericDate(time.Now()),
-			ExpiresAt: jwt.NewNumericDate(time.Now().Add(24 * time.Hour)),
+			ExpiresAt: jwt.NewNumericDate(time.Now().Add(24 * 7 * time.Hour)),
 		},
 	}
 	refreshToken := jwt.NewWithClaims(jwt.SigningMethodHS256, refreshClaims)
@@ -59,5 +66,60 @@ func GenerateAllTokens(email, userID, username, role string) (string, string, er
 }
 
 func UpdateAllTokens(userId, token, refreshToken string) (err error) {
+	var ctx, cancel = context.WithTimeout(context.Background(), 100*time.Second)
+	defer cancel()
+
+	// Time
+	updateAt, _ := time.Parse(time.RFC3339, time.Now().Format(time.RFC3339))
+
+	updateData := bson.M{
+		"$set": bson.M{
+			"token":         token,
+			"refresh_token": refreshToken,
+			"updated_at":    updateAt,
+		},
+	}
+	_, err = userCollection.UpdateOne(ctx, bson.M{"user_id": userId}, updateData)
+	if err != nil {
+		return err
+	}
 	return nil
+}
+
+func GetAccessToken(c *gin.Context) (string, error) {
+	authHeader := c.Request.Header.Get("Authorization")
+	if authHeader == "" {
+		return "", errors.New("authorization header is required")
+	}
+	tokenString := authHeader[len("Bearer "):]
+	if tokenString == "" {
+		return "", errors.New("token is required")
+	}
+	return tokenString, nil
+}
+
+func ValidateToken(tokenString string) (*SignedDetails, error) {
+	// Initialize a new instance of `SignedDetails`
+	claims := &SignedDetails{}
+
+	// Parse the token
+	token, err := jwt.ParseWithClaims(tokenString, claims, func(token *jwt.Token) (interface{}, error) {
+		return []byte(SECRET_KEY), nil
+	})
+
+	// Check for parsing errors
+	if err != nil {
+		return nil, err
+	}
+
+	// Verify signing method
+	if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
+		return nil, err
+	}
+
+	// Check expiration
+	if claims.ExpiresAt.Time.Before(time.Now()) {
+		return nil, errors.New("token has expired")
+	}
+	return claims, nil
 }
